Refine selected course UI and fix minor layout issues

--- a/tuition-calculator/static/style.css
+++ b/tuition-calculator/static/style.css
@@ -329,6 +329,7 @@ main {
   border: 1.2px solid var(--border-subtle);
   border-radius: var(--radius-card);
   display: flex;
+  color: #2c2c2c;;
   justify-content: space-between;
 }
 
@@ -345,10 +346,10 @@ main {
 }
 
 .course-selection-course-degree {
-  color: #000;
+  color: #2c2c2c;
   font-size: 0.75rem;
   padding: 0.1rem 0.7rem;
-  border: 1.2px solid #000;
+  border: 1.2px solid #2c2c2c;
   border-radius: var(--radius-card);
 }
 
@@ -405,14 +406,13 @@ main {
 
 .selected-courses-clear {
   font-size: 0.875rem;
-  color: #374151;
-  background-color: #e5eef5;
-  padding: 2.5px 10px;
-  border: 1px solid #cbd5e1;
+  color:  #374151;
+  background-color: #f3f4f6;
+  padding: 5px 10px;
+  border: 1px solid  #d1d5db;
   border-radius: var(--radius-card);
   display: flex;
   align-items: center;
-  gap: 0.75rem;
   cursor: pointer;
 }
 
@@ -421,8 +421,8 @@ main {
 }
 
 .selected-courses-clear:hover {
-  background-color: #d7e6f4; 
-  border-color: #b8cadd;     
+  background-color: #e5e7eb; 
+  border-color: #cbd5e1;     
 }
 
 .selected-courses-clear:disabled {
@@ -441,7 +441,7 @@ main {
 .selected-course-row {
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 0.75rem;
   padding: 0.85rem 1.1rem;
   border-radius: var(--radius-card-lg);
   background: #f3f4f6;
@@ -465,14 +465,14 @@ main {
   font-size: 0.9rem;
   font-weight: 600;
   letter-spacing: 0.02em;
-  color: #111827;
+  color: #2c2c2c;
   white-space: nowrap;
 }
 
 .selected-course-name {
   font-size: 0.9rem;
   font-weight: 500;
-  color: #4b5563;
+  color: #2c2c2c;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -482,13 +482,23 @@ main {
   display: flex;
   gap: 0.75rem;
   font-size: 0.78rem;
-  color: #6b7280;
+  color: #2c2c2c;
+  align-items: center;
 }
 
-.selected-course-points,
-.selected-course-faculty {
+.selected-course-points {
   white-space: nowrap;
   font-weight: bold;
+}
+
+.selected-course-faculty {
+  white-space: nowrap;
+  font-weight: 500;
+  color: #2c2c2c;
+  font-size: 0.75rem;
+  padding: 0.1rem 0.7rem;
+  border: 1.2px solid #2c2c2c;
+  border-radius: var(--radius-card);
 }
 
 .selected-course-price {
@@ -501,18 +511,18 @@ main {
 
 .selected-course-price-label {
   font-size: 0.75rem;
-  color: #6b7280;
+  color: #2c2c2c;
 }
 
 .selected-course-price-value {
   font-size: 0.95rem;
   font-weight: 600;
-  color: #374151;
+  color: #2c2c2c;
 }
 .selected-course-remove {
   border: none;
   background: transparent;
-  color: #111827;
+  color: #2c2c2c;
   font-size: 1.05rem;
   line-height: 1;
   padding: 0.25rem 0.35rem;
@@ -574,7 +584,7 @@ main {
 }
 
 .radio-button {
-  accent-color: black;
+  accent-color:  #374151;
 }
 
 .ssl-panel-onshore,
